--- a/plugin-unstructured-storage-util/pom.xml
+++ b/plugin-unstructured-storage-util/pom.xml
@@ -1,20 +1,28 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.alibaba.datax</groupId>
         <artifactId>datax-all</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+
     <artifactId>plugin-unstructured-storage-util</artifactId>
+
     <name>plugin-unstructured-storage-util</name>
-    <description>plugin-unstructured-storage-util通用的文件类型的读取写入方法，
-        供TxtFileReader/Writer, OSSReader/Writer ,FtpReader/Writer, HdfsReader/Writer使用。
+
+    <description>
+        plugin-unstructured-storage-util通用的文件类型的读取写入方法，
+        供 TxtFileReader/Writer, OSSReader/Writer ,FtpReader/Writer, HdfsReader/Writer使用。
     </description>
+
     <packaging>jar</packaging>
+
     <properties>
         <hadoop.version>2.7.1</hadoop.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.alibaba.datax</groupId>
