--- a/streamreader/pom.xml
+++ b/streamreader/pom.xml
@@ -1,6 +1,7 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.alibaba.datax</groupId>
         <artifactId>datax-all</artifactId>
@@ -8,7 +9,9 @@
     </parent>
 
     <artifactId>streamreader</artifactId>
+
     <name>streamreader</name>
+
     <packaging>jar</packaging>
 
     <dependencies>
@@ -50,17 +53,12 @@
             </resource>
         </resources>
         <plugins>
-            <!-- compiler plugin -->
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>${jdk-version}</source>
-                    <target>${jdk-version}</target>
-                    <encoding>${project-sourceEncoding}</encoding>
-                </configuration>
             </plugin>
-            <!-- assembly plugin -->
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
                     <descriptors>
@@ -80,5 +78,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
